--- a/frontend/index.html
+++ b/frontend/index.html
@@ -428,10 +428,10 @@
                     <div id="ressourcesEtQuantitesHdv">
 
                         <select name="" id="ressourcesTransfertHdv">
-                            <option value="bois" id="bois">Bois</option>
-                            <option value="pierre" id="pierre">Pierre</option>
-                            <option value="cuivre" id="cuivre">Cuivre</option>
-                            <option value="etain" id="etain">Étain</option>
+                            <option value="wood" id="bois">Bois</option>
+                            <option value="stone" id="pierre">Pierre</option>
+                            <option value="copper" id="cuivre">Cuivre</option>
+                            <option value="tin" id="etain">Étain</option>
                         </select>
                         
                         <input type="number" step="1" value="0"  min="0" id="quantiteTransfertHdv"/>
