ajout sprites espionne/athena/hermes + vueChoixDieu + fix bouton quitter partie

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -116,6 +116,18 @@
             </div>
 
             <svg id="jeu"></svg>
+
+            <div id="vueChoixDieu">
+                <div class="CDContainer">
+                    <div class="CDContainerTitre">
+                        <p>Sélectionnez votre divinité</p>
+                    </div>
+                        <img src="/img/personnages/dieux/athena.png" id="athena" width="115" height="150">
+                        <img src="/img/personnages/dieux/pierris.png" width="115" id="pierris" height="150">
+                        <img src="/img/personnages/dieux/hermes.png" width="115" id="hermes" height="150">
+                </div>
+            </div>
+
             <div id="vueInfoHdv">
 
                 <div class="HdvNavigationContainer" id="titreVueHdv">
@@ -160,7 +172,7 @@
 
                         <div class="HdvRecrutementDiv1" id="bouttonRecruter">
                             <div class="HdvRecrutementImage">
-                                <img src="/img/personnages/rouge/messager.png" width="125" height="150">
+                                <img src="/img/personnages/rouge/espionne.png" width="125" height="150">
                             </div>
                             <div class="HdvRecrutementTexte">
                                 <p>Envoyer un espion</p>
