emit rejoindrePartie dieu

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -79,7 +79,7 @@
                 <div id="textedialogue">
                     <p>Bienvenue dans le péloponnèse. Commence par sélectionner la cité dont tu souhaites devenir le
                         stratège !</p>
-                    <div class="choixdialogue">
+                    <div class="choixdialogue" id="choixdialogue">
                         <p id="beotie" class="choix-cite" tabindex="0">Béotie</p>
                         <p id="attique" class="choix-cite" tabindex="0">Attique</p>
                         <p id="argolide" class="choix-cite" tabindex="0">Argolide</p>
@@ -91,11 +91,11 @@
             <div id="vueChoixDieu">
                 <div class="CDContainer">
                     <div class="CDContainerTitre">
-                        <p>Sélectionnez votre divinité</p>
+                        <p>Sélectionnez votre divinité</p>  
                     </div>
-                        <img src="/img/personnages/dieux/athena.png" id="athena" width="115" height="150">
-                        <img src="/img/personnages/dieux/pierris.png" width="115" id="pierris" height="150">
-                        <img src="/img/personnages/dieux/hermes.png" width="115" id="hermes" height="150">
+                        <img src="/img/personnages/dieux/athena.png" id="Athena" width="115" height="150">
+                        <img src="/img/personnages/dieux/pierris.png" id="Pierris" width="115" height="150">
+                        <img src="/img/personnages/dieux/hermes.png" id="Hermès" width="115" height="150">
                 </div>
             </div>
             
