--- a/frontend/index.html
+++ b/frontend/index.html
@@ -95,7 +95,7 @@
                     </div>
                         <img src="/img/personnages/dieux/athena.png" id="Athena" width="115" height="150">
                         <img src="/img/personnages/dieux/pierris.png" id="Pierris" width="115" height="150">
-                        <img src="/img/personnages/dieux/hermes.png" id="Hermès" width="115" height="150">
+                        <img src="/img/personnages/dieux/Hermès.png" id="Hermès" width="115" height="150">
                 </div>
             </div>
             
