--- a/frontend/index.html
+++ b/frontend/index.html
@@ -129,7 +129,12 @@
             <div class="ressources"></div>
             <p id="placeUnEspionStp"></p>
 
-            <div id="finTour" class="boutonHaut1">
+            <div class="boutonHaut3">
+                <img src="img/autre/lettre.png" id="afficherNotifs">
+                <img src="img/autre/livre.png" id="afficherTutoriel">
+            </div>
+
+            <div id="finTour" class="boutonHaut2">
                 <p>Fin de tour</p>
             </div>
 
@@ -137,17 +142,12 @@
                 <p></p>
             </div> -->
 
-            <div id="quitter2" class="boutonHaut2">
+            <div id="quitter2" class="boutonHaut1">
                 <p>Quitter</p>
             </div>
         </div>
 
         <div class="damier" id="damierjeu">
-
-            <div class="gauche">
-                <img src="img/autre/lettre.png" id="afficherNotifs">
-                <img src="img/autre/livre.png" id="afficherTutoriel">
-            </div>
 
             <svg id="jeu"></svg>
 
