ajout de Demeter

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -113,6 +113,7 @@
                         <img src="/img/personnages/dieux/athena.png" id="Athena" width="115" height="150">
                         <img src="/img/personnages/dieux/pierris.png" id="Pierris" width="115" height="150">
                         <img src="/img/personnages/dieux/hermès.png" id="Hermès" width="115" height="150">
+                        <img src="/img/personnages/dieux/demeter.png" id="Demeter" width="115" height="150">
                 </div>
             </div>
             
