rework vue batiments

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -578,7 +578,13 @@
 
         </div>
 
-        <div id="vueBatiments"></div>
+        <div id="vueBatiments">
+            <div id="BatimentsContainerID" class="BatimentsContainer">
+                <div class="BatimentsContainerTitre">
+                    <p>Bâtiments à contruire</p>
+                </div>
+            </div>
+        </div>
 
         <div id="vueNotifications"></div>
 
