rework vue statsunite

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -595,21 +595,27 @@
         </div>
 
         <div id="statsUnite">
-            <img id="uniteImage" src="" width="180" height="150" />
-            <div id="unitStats">
-                <p id="uniteName">Nom : </p>
-                <p id="position">Position : </p>
-                <p id="mov">Mouvement : </p>
-                <p id="uniteHp">Points de vie : </p>
-                <p id="uniteStrat">Stratégie : </p>
-                <div class="uniteMode">
-                    <select id="uniteMode"></select>
-                    <button id="uniteModeButton" class="buttonblack">Appliquer</button>
+            <div class="unitStatsContainer">
+                
+                <div class="unitStatsContainerTitre">
+                    <p>Statistiques de l'unité</p>
                 </div>
-                <p id="uniteAttack">Attaque : </p>
-                <p id="uniteDefence">Défense : </p>
-                <div id="uniteWood">Bois : </div>
-                <div id="uniteStone">Pierres : </div>
+
+                <div id="unitStats">
+                    <p id="uniteName"></p>
+                    <p id="position"></p>
+                    <p id="mov"></p>
+                    <p id="uniteHp"></p>
+                    <p id="uniteStrat"></p>
+                    <!-- <div class="uniteMode">
+                        <select id="uniteMode"></select>
+                        <button id="uniteModeButton" class="buttonblack">Appliquer</button>
+                    </div> -->
+                    <p id="uniteAttack"></p>
+                    <p id="uniteDefence"></p>
+                    <p id="uniteWood"></p>
+                    <p id="uniteStone"></p>
+                </div>
             </div>
         </div>
 
