ajout sprite loup1, loupe2 + modif vue stats unite + clignotement

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -133,6 +133,8 @@
             <div class="boutonHaut3">
                 <img src="img/autre/lettre.png" id="afficherNotifs">
                 <img src="img/autre/livre.png" id="afficherTutoriel">
+                <img src="img/autre/loupe1.png" id="afficherVueUnite">
+                <img src="img/autre/loupe2.png" id="afficherVueBatiment">
             </div>
 
             <div id="finTour" class="boutonHaut2">
