--- a/frontend/index.html
+++ b/frontend/index.html
@@ -338,10 +338,10 @@
                             <form id="mesRessourcesForm">
                                 <select name="mesRessources" id="mesRessources">
                                     <option value="or" id="or">Or</option>
-                                    <option value="bois" id="bois">Bois</option>
-                                    <option value="pierre" id="pierre">Pierre</option>
-                                    <option value="cuivre" id="cuivre">Cuivre</option>
-                                    <option value="etain" id="etain">Étain</option>
+                                    <option value="wood" id="bois">Bois</option>
+                                    <option value="stone" id="pierre">Pierre</option>
+                                    <option value="copper" id="cuivre">Cuivre</option>
+                                    <option value="tin" id="etain">Étain</option>
                                 </select>
                                 </label>
                             </form>
@@ -379,10 +379,10 @@
                             <form id="ressourcesEnnemiesForm">
                                 <select name="ressourcesEnnemies" id="ressourcesEnnemies">
                                     <option value="or" id="or">Or</option>
-                                    <option value="bois" id="bois">Bois</option>
-                                    <option value="pierre" id="pierre">Pierre</option>
-                                    <option value="cuivre" id="cuivre">Cuivre</option>
-                                    <option value="etain" id="etain">Étain</option>
+                                    <option value="wood" id="bois">Bois</option>
+                                    <option value="stone" id="pierre">Pierre</option>
+                                    <option value="copper" id="cuivre">Cuivre</option>
+                                    <option value="tin" id="etain">Étain</option>
                                 </select>
                                 </label>
                             </form>
