Modifications du mapmaker: download local de la carte et prise en charge des X

--- a/mapmaker/frontend/index.html
+++ b/mapmaker/frontend/index.html
@@ -8,7 +8,7 @@
     <link href="/script/style.css" rel="stylesheet"/>
     <script src="/script/client.js" type="text/javascript"></script>
 
-    <title>GrHex</title>
+    <title>GrHex OFFICIAL MAPMAKER</title>
 </head>
 
 <body>
@@ -93,6 +93,9 @@ aze
                 <button id="1" onclick="foret()">
                     foret
                 </button>
+                <button id="1" onclick="X()">
+                    X
+                </button>
 
                       
 
@@ -107,13 +110,13 @@ aze
         </div>
     </div>
     
+    <a id="downloadAnchorElem" style="display:none"></a>
     <script>
         document.getElementById('0').addEventListener('click', function() {
             document.querySelector('.accueil').style.display = 'none';
             document.querySelector('.partie').style.display = 'block';
         });
     </script>
-
 
 </body>
 </html>
